Bugfixes
Fix the following bugs:

* Get view in product and work controller didn't render related objects.
* Field was erased after leaving it with tab key.
* Hover color in main navigation too dark.

--- a/grails-app/assets/stylesheets/_variables.less
+++ b/grails-app/assets/stylesheets/_variables.less
@@ -54,6 +54,7 @@
 
 @input-border-focus: lighten(@spring-green-base, 10%);
 
+@navbar-default-link-hover-color: darken(@spring-green-base, 17%);
 @navbar-padding-horizontal: 0;
 @navbar-default-sm-bg: #80A322;
 @navbar-default-sm-link-color: #FFF;
